k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: aws-ybk.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port: 
                  number: 80
          - path: /course
            pathType: Prefix
            backend:
              service:
                name: course-service
                port: 
                  number: 80
          - path: /festival
            pathType: Prefix
            backend:
              service:
                name: festival-service
                port: 
                  number: 80
          - path: /notice
            pathType: Prefix
            backend:
              service:
                name: notice-service
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port: 
                  number: 80
